--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-# Чтобы после сборки проекта у вас заработали исходники из папки dist нужно указать путь до неё, например:
-#VUE_APP_BASE_URL=file:///C:/Users/aleks/PhpstormProjects/v-hobby-test/dist
-VUE_APP_BASE_URL=file:///C:/Users/aleks/PhpstormProjects/v-hobby-test/dist
+VUE_APP_BASE_URL=/
